--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,20 @@ node_modules/
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
 # Build outputs
 build/
 dist/
+
+# Coverage
+coverage/
+
+# Vite cache
+.vite/
 
 # Environment variables
 .env
@@ -17,3 +27,7 @@ dist/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Editor/IDE
+.vscode/
+.idea/
