--- a/package.json
+++ b/package.json
@@ -35,13 +35,5 @@
 		"vite": "^5.3.4",
 		"vitest": "^2.1.9"
 	},
-	"vitest": {
-		"test": {
-			"globals": true,
-			"environment": "jsdom",
-			"setupFiles": [
-				"./src/tests/setupTests.ts"
-			]
-		}
-	}
+	"vitest": {}
 }
